@@ -23,6 +23,8 @@ Version 0.3.6 (under dev!)
   hdata_get_string
 * api: fix bug with function config_set_desc_plugin (use immediately
   description for option when function is called)
+* irc: fix bug with comma in irc color code: do not strip comma if it is not
+  followed by a digit (bug #33662)
 * irc: add prefix "#" for all channels on join (if no prefix given)
 * irc: switch to buffer on /join #channel if channel buffer already exists
 * irc: update host of nicks on manual /who
